Section 08/Lecture 65-66 테스트 시 발생한 이슈 수정 - toList 는 변경 불가 리스트 생성 - updateFailureMessages 조건 잘못 됨